# RustStreamTv

./: Cargo.toml  LICENSE.md  README.md
config/: default.toml
src/: api.rs  config.rs  main.rs  media.rs  state.rs
