[package]
name = "RustStreamTV"
version = "0.1.0"
edition = "2024"

[dependencies]
config = "0.15.13"
serde = { version = "1.0.219", features = ["derive"] }
tokio = {version = "1.46.1", features = ["full"]}
axum = {version = "0.8.4", features = ["json"]}
tokio-util = { version = "0.7.15", features = ["io"] }
serde_json = "1.0.140"
mime_guess = "2.0.5"
walkdir = "2.5.0"
anyhow = "1.0.98"
